[JSC] Fix build after r243232 on unsupported 64bit architectures https://bugs.webkit.org/show_bug.cgi?id=196072

Reviewed by Keith Miller.

As Keith suggested we already expect 16 free bits at the top of any
pointer for JSValue even for the unsupported 64 bit arches.

* bytecode/CodeOrigin.h:

Canonical link: https://commits.webkit.org/210426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243363 268f45cc-cd09-0410-ab3c-d52691b4dbfc